--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "pixi-fake.js",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "pixi-fake.js",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dist": "parcel index.js",
   },
   "author": "",
   "license": "GPL",
-  "dependencies": {}
+  "dependencies": {
+    "babel-plugin-transform-runtime": "^6.23.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3"
+  }
 }
