--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "pixi-fake.js",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "description": "pixi-fake.js",
   "main": "dist/index.js",
   "scripts": {
-    "dist": "parcel index.js",
+    "dist": "parcel index.js"
   },
   "author": "",
   "license": "GPL",
